test/testdata/invalid/type_mismatch.cue
package config

import "github.com/grantcarthew/start/test/testdata/schemas"

// Invalid: timeout must be int, not string
tasks: "bad": schemas.#Task & {
	command: "echo test"
	prompt:  "Test"
	timeout: "thirty"
}
